--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div id="out">نتیجه اینجا نمایش داده می‌شود...</div>
     <div class="ex">
       ✅ پشتیبانی از: جمع/ضرب/توان (`5^3`)، فاکتوریل (`5!`)، ریشه (`sqrt(16)`)، لگ (`log(100)`)، مثلثات (`sin(pi/2)`)، معادله (`x+2=5`)، انتگرال (`integrate(x^2,x)`)، ماتریس و...
+      نام سازنده : عرفان حیدری
+      مدرسه و کلاس : اسرار 801
     </div>
   </div>
   <script>
